--- a/ConversorDivisasDataBinding/app/src/main/res/layout/activity_main.xml
+++ b/ConversorDivisasDataBinding/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -7,8 +7,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    
+    <data>
+        <variable
+            name=" "
+            type=" " />
+    </data>
 
-    <ImageView
+<ImageView
         android:id="@+id/imagenlogo"
         android:layout_width="match_parent"
         android:layout_height="188dp"
@@ -72,4 +78,4 @@
             android:text="@string/d_lares" />
     </FrameLayout>
 
-</LinearLayout>
+</layout>
